2009-05-18  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11009: External Links get prepended with http://typo3 in the RTEhtmlarea in Firefox 3.0.11/3.5b4

2009-05-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #10165: FlexForms: wrong mm-relations after copy and localize (thanks to Peter Kuehn)

2009-05-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11040: ENGINE modifier in ext_tables.sql cannot be parsed

2009-04-24  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10977: Copyright in TYPO3 comment still 2006 (Thanks to Johannes Feustel)

2009-04-21  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #10939: Wrong nesting of <ul> <li> tags in expanded mount root in module file > filelist

2009-04-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up for issue #10844: htmlArea RTE: IE8 creates erroneous ranges when selection is empty

2009-04-08  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10266: No user authentication for >1 TYPO3 installation under one domain (Thanks to Marcus Krause)

2009-04-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #10834: htmlArea RTE: IE8 now uses standard name for DOM class attribute
	* Updated htmlArea RTE version to 1.5.8 for TYPO3 4.1.11
	* Fixed issue #10837: htmlArea RTE: IE8 reports unknown "complete" attribute on img nodes
	* Fixed bug #10844: htmlArea RTE: IE8 creates erroneous ranges when selection is empty

2009-04-03  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #10838: t3lib_cs->utf8_decode() does not check whether the target charset is utf8

2009-03-31  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #10567: Added IE8+ support / Get rid of browser version dependent t3lib_div::clientInfo() (Thanks to Steffen Gebert)

2009-03-23  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #10410: Generation of encryption key does not work in IE7 (thanks to Steffen Mueller)

2009-02-27  Michael Stucki  <michael@typo3.org>
